# projectDZ8

./: 1.py  README.md  decorators.py  main.py  mylog.txt  pyproject.toml
src/: generators.py  main.py  masks.py  processing.py  wedget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_wedget.py
