[tool.poetry]
name = "pythonproject13"
version = "0.1.0"
description = ""
authors = ["Ruslan <rus.beluaev.101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
